--- a/8720181313424.html
+++ b/8720181313424.html
@@ -7,17 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
-    <title>Hello, world!</title>
+    <title>Dove Men+Care Żel Extra Fresh 400ml</title>
   </head>
   <body>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="8720181313424/css/8720181313424.css" />
-
-    <div class="a8720181313424">
+    <link rel="stylesheet" href="./8720181313424/css/8720181313424.css" />
+    <div class="calosc">
       <div class="gora">
         <div class="row">
           <div
@@ -116,10 +114,7 @@
           </div>
         </div>
       </div>
-      <div
-        class="row b8720181313424"
-        style="padding-top: 3%; padding-bottom: 3%"
-      >
+      <div class="row szesciokaty">
         <div class="col-md-4 col-sm-6">
           <center>
             <img src="./8720181313424/img/ikona1.png" />
@@ -143,65 +138,52 @@
           ciała, twarzy i włosów
         </div>
       </div>
-      <div
-        class="row d8720181313424"
-        style="padding-top: 1%; padding-bottom: 1%"
-      >
-        <div class="col-md-3 col-sm-4 kwadraty" style="text-align: left">
-          <img class="d8720181313424" src="./8720181313424/img/kwadrat1.png" />
-          <strong>DLA SILNEJ<br />I ODŻYWIONEJ SKÓRY<br />KAŻDEGO DNIA</strong>
-          <p style="text-align: left">
+      <!-- kwadraty begin-->
+      <div class="row kwadraty">
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat1"></div>
+          <div class="kwadraty__naglowek">
+            DLA SILNEJ<br />I ODŻYWIONEJ SKÓRY<br />KAŻDEGO DNIA
+          </div>
+          <div class="kwadraty__tekst">
             Żel pod prysznic Dove Men+Care Extra Fresh to nawilżający żel, który
             radzi sobie z problemem suchej skóry i pozostawia skórę odżywioną
             przez cały dzień.
-          </p>
+          </div>
         </div>
-        <div class="col-md-3 col-sm-4 kwadraty">
-          <center>
-            <img class="d8720181313424" src="./8720181313424/img/kwadrat2.png"
-          </center>
-          <strong>TECHNOLOGIA MIKRONAWILŻENIA</strong>
-          <p>
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat2"></div>
+          <div class="kwadraty__naglowek">TECHNOLOGIA MIKRONAWILŻENIA</div>
+          <div class="kwadraty__tekst">
             Jedyny żel z technologią MikroNawilżenia, która aktywuje się podczas
             mycia i pomaga zatrzymać naturalne nawilżenie skóry lepiej niż
             zwykły żel pod prysznic. Dove Men+Care jest rekomendowany przez
             dermatologów.
-          </p>
+          </div>
         </div>
-        <div class="col-md-3 col-sm-4 kwadraty">
-          <center>
-            <img class="d8720181313424" src="./8720181313424/img/kwadrat3.png"
-          </center>
-          <strong>ORZEŹWIAJĄCY ZAPACH</strong>
-          <p>
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat3"></div>
+          <div class="kwadraty__naglowek">ORZEŹWIAJĄCY ZAPACH</div>
+          <div class="kwadraty__tekst">
             Żel do mycia Extra Fresh ma odświeżający aromat orzeżwiającej
             mandarynki, odrobiny mentolu i drzewa sandałowego. Ciesz się świeżym
             zapachem jeszcze długo po kąpieli.
-          </p>
+          </div>
         </div>
-        <div class="col-md-3 col-sm-4 kwadraty">
-          <center>
-            <img class="d8720181313424" src="./8720181313424/img/kwadrat4.png"
-          </center>
-          <strong>STWORZONY DLA POTRZEB MĘSKIEJ SKÓRY</strong>
-          <p>
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat4"></div>
+          <div class="kwadraty__naglowek">
+            STWORZONY DLA POTRZEB MĘSKIEJ SKÓRY
+          </div>
+          <div class="kwadraty__tekst">
             Teraz możesz rozpocząć dzień ze skórą, która jest odżywiona, lepiej
             chroniona i odświeżona, dzięki temu nawilżającemu i skutecznemu
             żelowi do mycia ciała dla mężczyzn od Dove Men+Care.
-          </p>
+          </div>
         </div>
       </div>
-      <div
-        class="c8720181313424"
-        style="
-          background-image: url(./8720181313424/img/dolny_modul.png);
-          background-size: 100%;
-          background-repeat: no-repeat;
-          margin-bottom: 1px;
-          height: 61vw;
-          max-height: 600px;
-        "
-      >
+      <!-- kwadraty end -->
+      <div class="dol">
         CZUJ SIĘ KOMFORTOWO W SWOJEJ SKÓRZE PRZEZ CAŁY DZIEŃ DZIĘKI DOVE
         MEN+CARE.
       </div>
