--- a/8720181222443.html
+++ b/8720181222443.html
@@ -6,5 +6,154 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Żel pod prysznic Dove Care By Nature Replenishing 400ml</title>
   </head>
-  <body></body>
+  <body>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./8720181222443/css/8720181222443.css" />
+    <div class="calosc">
+      <div class="gora">
+        <div class="col-lg-1 col-md-1 col-sm-1"></div>
+        <div
+          class="img-responsive col-lg-2 col-md-3 col-sm-3 hidden-xs gora--butelka"
+        >
+          <img src="/8720181222443/img/replenishing1.png" />
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-8 gora__logo">
+          <img src="/8720181222443/img/logo.png" />
+          <div class="gora__tekst1">Naturalna pielęgnacja</div>
+          <div class="gora__tekst2">92% składników pochodzenia naturalnego</div>
+          <img src="/8720181222443/img/pasek.png" />
+          <div class="gora__tekst3">Dla odżywionej skóry</div>
+        </div>
+      </div>
+      <div class="lab">
+        <div class="col-xl-1 col-md-1"></div>
+        <div class="col-xl-6 col-md-6 col-sm-6 lab__logo">
+          <img src="/8720181222443/img/100.png" />
+          <div class="lab__tekst1">
+            Żel pod prysznic Dove Care By Nature Replenishing
+          </div>
+          <div class="lab__tekst2">
+            Pokochasz ten naturalny żel pod prysznic za słodki, ciepły zapach
+            mleka owsianego – składnika znanego ze swoich właściwości
+            nawilżających i kojących. Dzięki czemu skóra pozostanie odżywiona,
+            bardziej miękka i gładka.
+          </div>
+        </div>
+        <div class="col-xl-1 col-md-1"></div>
+      </div>
+      <div class="opis">
+        <div class="row">
+          Poczuj moc naturalnej pielęgnacji z rozświetlającym żelem pod prysznic
+          Dove Care by Natural Replenishing, który został stworzony z dodatkiem
+          5 składników pochodzenia naturalnego Care by Natural Replenishing,
+          który został stworzony z dodatkiem 5 składników pochodzenia
+          naturalnego. Każdy prysznic to pielęgnacja - odkrywaj nawilżoną i
+          promienną skórę o świeżym, kwiatowym zapachu z Dove.
+        </div>
+      </div>
+      <div class="row kwadraty">
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat1"></div>
+          <div class="kwadraty__naglowek">
+            Delikatny, nawilżający żel pod prysznic
+          </div>
+          <div class="kwadraty__tekst">
+            Dzięki 100% delikatnym składnikom myjącym żel Dove Glowing jest
+            delikatny dla mikrobiomu Twojej skóry i zapewnia natychmiastowe
+            nawilżenie.
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat2"></div>
+          <div class="kwadraty__naglowek">
+            Natychmiastowe nawilżenie, piękny zapach
+          </div>
+          <div class="kwadraty__tekst">
+            Wzbogacony ekstraktem z kwiatu lotosu i wodą ryżową – składników
+            znanych ze swych właściwości nawilżających i rozświetlających. Żel
+            Dove Glowing pozostawi skórę miękką i promienną o delikatnym
+            kwiatowym zapachu.
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat3"></div>
+          <div class="kwadraty__naglowek">
+            Odkrywaj promienną skórę każdego dnia
+          </div>
+          <div class="kwadraty__tekst">
+            Ten kremowy żel pod prysznic stworzony z dodatkiem składników
+            nawilżających, odżywia skórę, nadając jej miękkość i blask.
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-4">
+          <div class="kwadraty__obrazy kwadraty__obrazy--kwadrat4"></div>
+          <div class="kwadraty__naglowek">Dove dla planety</div>
+          <div class="kwadraty__tekst">
+            Formuła żelu Dove Care by Nature jest w 92% naturalnego pochodzenia
+            i nie zawiera siarczanów SLES/SLS przez co jest odpowiednią dla
+            wszystkich rodzajów skóry. Formuła jest w 92% biodegradowalna, a
+            butelka nadaje się w 100% do recyklingu.
+          </div>
+        </div>
+      </div>
+      <div class="butelki_tlo">
+        <div class="butelki">
+          <div class="row butelki_gora"></div>
+          <div class="row butelki__dol">
+            <div class="butelki__dol--naglowek">
+              Nasza mieszanka składników<br />pochodzenia naturalnego<br />
+            </div>
+            <img src="/8720181222443/img/pasek.png" />
+            <div class="butelki__dol--punkty">
+              <ol>
+                <li class="butelki__dol--punkty--odstepy">
+                  Naturalne składniki myjące –
+
+                  <span class="butelki__dol--tresc">
+                    surfaktanty (składniki powierzchniowo czynne), które
+                    efektywnie oczyszczają skórę z brudu bez zmywania
+                    naturalnych lipidów skóry.
+                  </span>
+                </li>
+                <li class="butelki__dol--punkty--odstepy">
+                  Naturalne składniki odżywcze –
+
+                  <span class="butelki__dol--tresc">
+                    podczas mycia skóra traci niektóre kluczowe składniki
+                    odżywcze, dlatego istotne jest ich uzupełnienie i
+                    wzmocnienie bariery ochronnej.
+                  </span>
+                </li>
+                <li class="butelki__dol--punkty--odstepy">
+                  Naturalne składniki nawilżające -
+
+                  <span class="butelki__dol--tresc">
+                    podczas mycia skóra może ulegać odwodnieniu. Formuła naszych
+                    żeli nawilża skórę i chroni przed wysuszeniem.
+                  </span>
+                </li>
+                <li class="butelki__dol--punkty--odstepy">
+                  Naturalne prebiotyki –
+                  <span class="butelki__dol--tresc"
+                    >wspomagają naturalny mikrobom skóry i wzmacniają naturalną
+                    barierę ochronną.</span
+                  >
+                </li>
+                <li class="butelki__dol--punkty--odstepy">
+                  Ekstrakty pochodzenia roślinnego –
+                  <span class="butelki__dol--tresc">
+                    cała linia Dove Care by Nature wzbogacona jest o naturalne
+                    ekstrakty znane ze swych pielęgnujących właściwości.
+                  </span>
+                </li>
+              </ol>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
