--- a/8720181222443.html
+++ b/8720181222443.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="./8720181222443/css/8720181222443.css" />
     <div class="calosc">
       <div class="gora">
-        <div class="col-lg-1 col-md-1 col-sm-1"></div>
+        <div class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></div>
         <div
-          class="img-responsive col-lg-2 col-md-3 col-sm-3 hidden-xs gora--butelka"
+          class="img-responsive col-lg-3 col-md-3 col-sm-4 hidden-xs gora--butelka"
         >
           <img src="/8720181222443/img/replenishing1.png" />
         </div>
-        <div class="col-lg-9 col-md-8 col-sm-8 gora__logo">
+        <div class="col-lg-8 col-md-8 col-sm-8 col-sm-7 col-xs-12 gora__logo">
           <img src="/8720181222443/img/logo.png" />
           <div class="gora__tekst1">Naturalna pielęgnacja</div>
           <div class="gora__tekst2">92% składników pochodzenia naturalnego</div>
@@ -29,20 +29,23 @@
         </div>
       </div>
       <div class="lab">
-        <div class="col-xl-1 col-md-1"></div>
-        <div class="col-xl-6 col-md-6 col-sm-6 lab__logo">
+        <div class="col-xl-1 col-md-1 col-sm-1 hidden-xs"></div>
+        <div class="col-xl-6 col-md-7 col-sm-7 col-xs-8 lab__logo">
           <img src="/8720181222443/img/100.png" />
           <div class="lab__tekst1">
             Żel pod prysznic Dove Care By Nature Replenishing
           </div>
           <div class="lab__tekst2">
             Pokochasz ten naturalny żel pod prysznic za słodki, ciepły zapach
-            mleka owsianego – składnika znanego ze swoich właściwości
-            nawilżających i kojących. Dzięki czemu skóra pozostanie odżywiona,
-            bardziej miękka i gładka.
+            mleka owsianego –
+            <span class="hidden-xs"
+              >składnika znanego ze swoich właściwości nawilżających i kojących.
+              Dzięki czemu skóra pozostanie odżywiona, bardziej miękka i
+              gładka.</span
+            >
           </div>
         </div>
-        <div class="col-xl-1 col-md-1"></div>
+        <div class="col-xl-8 col-md-4 col-sm-2 hidden-xs"></div>
       </div>
       <div class="opis">
         <div class="row">
