--- a/8720181222443.html
+++ b/8720181222443.html
@@ -102,9 +102,8 @@
           </div>
         </div>
       </div>
-      <div class="butelki_tlo">
+      <div class="butelki__tlo">
         <div class="butelki">
-          <div class="row butelki_gora"></div>
           <div class="row butelki__dol">
             <div class="butelki__dol--naglowek">
               Nasza mieszanka składników<br />pochodzenia naturalnego<br />
@@ -141,7 +140,7 @@
                 <li class="butelki__dol--punkty--odstepy">
                   Naturalne prebiotyki –
                   <span class="butelki__dol--tresc"
-                    >wspomagają naturalny mikrobom skóry i wzmacniają naturalną
+                    >wspomagają naturalny mikrobom skóry i wzmacniają<br />naturalną
                     barierę ochronną.</span
                   >
                 </li>
@@ -155,6 +154,7 @@
               </ol>
             </div>
           </div>
+          <!-- <div class="row butelki__dol--wypelnienie"></div> -->
         </div>
       </div>
     </div>
