--- a/8720181180330.html
+++ b/8720181180330.html
@@ -11,27 +11,27 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./8720181222443/css/8720181222443.css" />
+    <link rel="stylesheet" href="./8720181180330/css/8720181180330.css" />
     <div class="calosc">
       <div class="gora">
         <div class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></div>
         <div
           class="img-responsive col-lg-3 col-md-3 col-sm-4 hidden-xs gora--butelka"
         >
-          <img src="/8720181222443/img/replenishing1.png" />
+          <img src="/8720181180330/img/glowing.png" />
         </div>
         <div class="col-lg-8 col-md-8 col-sm-8 col-sm-7 col-xs-12 gora__logo">
-          <img src="/8720181222443/img/logo.png" />
+          <img src="/8720181180330/img/logo.png" />
           <div class="gora__tekst1">Naturalna pielęgnacja</div>
           <div class="gora__tekst2">92% składników pochodzenia naturalnego</div>
-          <img src="/8720181222443/img/pasek.png" />
-          <div class="gora__tekst3">Dla odżywionej skóry</div>
+          <img src="/8720181180330/img/pasek.png" />
+          <div class="gora__tekst3">Dla promiennej skóry</div>
         </div>
       </div>
       <div class="lab">
         <div class="col-xl-1 col-md-1 col-sm-1 hidden-xs"></div>
         <div class="col-xl-6 col-md-7 col-sm-7 col-xs-8 lab__logo">
-          <img src="/8720181222443/img/100.png" />
+          <img src="/8720181180330/img/100.png" />
           <div class="lab__tekst1">
             Żel pod prysznic Dove Care By Nature Replenishing
           </div>
@@ -108,7 +108,7 @@
             <div class="butelki__dol--naglowek">
               Nasza mieszanka składników<br />pochodzenia naturalnego<br />
             </div>
-            <img src="/8720181222443/img/pasek.png" />
+            <img src="/8720181180330/img/pasek.png" />
             <div class="butelki__dol--punkty">
               <ol>
                 <li class="butelki__dol--punkty--odstepy">
