--- a/8720181180330.html
+++ b/8720181180330.html
@@ -33,15 +33,15 @@
         <div class="col-xl-6 col-md-7 col-sm-7 col-xs-8 lab__logo">
           <img src="/8720181180330/img/100.png" />
           <div class="lab__tekst1">
-            Żel pod prysznic Dove Care By Nature Replenishing
+            Żel pod prysznic Dove Care By Nature Glowing
           </div>
           <div class="lab__tekst2">
-            Pokochasz ten naturalny żel pod prysznic za słodki, ciepły zapach
-            mleka owsianego –
-            <span class="hidden-xs"
-              >składnika znanego ze swoich właściwości nawilżających i kojących.
-              Dzięki czemu skóra pozostanie odżywiona, bardziej miękka i
-              gładka.</span
+            Poczuj moc naturalnej pielęgnacji z rozświetlającym żelem pod
+            prysznic Dove Care by Nature Glowing, który został stworzony z
+            dodatkiem 5 składników pochodzenia naturalnego. Każdy prysznic to
+            pielęgnacja<span class="hidden-xs">
+              – odkrywaj nawilżoną i promienną skórę o świeżym, kwiatowym
+              zapachu z Dove.</span
             >
           </div>
         </div>
@@ -50,11 +50,10 @@
       <div class="opis">
         <div class="row">
           Poczuj moc naturalnej pielęgnacji z rozświetlającym żelem pod prysznic
-          Dove Care by Natural Replenishing, który został stworzony z dodatkiem
-          5 składników pochodzenia naturalnego Care by Natural Replenishing,
-          który został stworzony z dodatkiem 5 składników pochodzenia
-          naturalnego. Każdy prysznic to pielęgnacja - odkrywaj nawilżoną i
-          promienną skórę o świeżym, kwiatowym zapachu z Dove.
+          Dove Care by Nature Glowing, który został stworzony z dodatkiem 5
+          składników pochodzenia naturalnego. Każdy prysznic to pielęgnacja –
+          odkrywaj nawilżoną i promienną skórę o świeżym, kwiatowym zapachu z
+          Dove.
         </div>
       </div>
       <div class="row kwadraty">
@@ -154,7 +153,6 @@
               </ol>
             </div>
           </div>
-          <!-- <div class="row butelki__dol--wypelnienie"></div> -->
         </div>
       </div>
     </div>
